[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo"
path = "src/main.rs"

[dependencies]
hyper = { version = "0.14", features = [
  "http1",
  "server",
  "stream",
  "runtime",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
chrono = "0.4.26"
termsize = "0.1"
